--- a/_includes/weather_satellite.html
+++ b/_includes/weather_satellite.html
@@ -1,9 +1,11 @@
 {% comment %}
 http://www.goes.noaa.gov/sohemi/
 {% endcomment %}
-<div id="weather_satellite">
-    <div class="image">
-        <img src="http://www.goes.noaa.gov/sohemi/PHILIR.JPG" width="100%" height="auto"/>
-        <p class="attribution">Data from Himawari-8</p>
+<div id="weather_block">
+    <div class="weather_satellite">
+        <div class="image">
+            <img src="http://www.goes.noaa.gov/sohemi/PHILIR.JPG" width="100%" height="auto"/>
+            <p class="attribution">Data from Himawari-8</p>
+        </div>
     </div>
 </div>
