--- a/_sass/weather.scss
+++ b/_sass/weather.scss
@@ -1,20 +1,24 @@
-
-#weather_satellite {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-top: 5px;
-    div.image {
-        background: black;
-        padding: 5px 5px 5px 5px;
-        margin: 5px 0px 5px 0;
-        img {
-            overflow: hidden;
-        }
-        p.attribution {
-            @include attribution;
-            color: lighten($color_image_attribution, 30%);
-            padding: 0px 0px 3px 0px;
-            margin: 0px 0 0 0;
+#weather_block {
+    div.weather_satellite {
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding-top: 5px;
+        div.image {
+            background: black;
+            padding: 5px 5px 5px 5px;
+            margin: 5px 0px 5px 0;
+            @include max-screen(720px) {
+                margin-right: 5px;
+            }
+            img {
+                overflow: hidden;
+            }
+            p.attribution {
+                @include attribution;
+                color: lighten($color_image_attribution, 30%);
+                padding: 0px 0px 3px 0px;
+                margin: 0px 0 0 0;
+            }
         }
     }
 }
