--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -8,7 +8,7 @@
                 <h2>{{ post.title }}</h2>
             </div>
             {% if post.image.source != nil %}
-                {% if post.style == "horizontal" %}
+                {% if post.image.layout == "auto_width" %}
                 <div class="image_small">
                     <img src="{{ post.image.source }}" class="label" width="100%" height="auto"/>
                 </div>
@@ -34,7 +34,7 @@
                 <h2>{{ post.title }}</h2>
             </div>
             {% if post.image.source != nil %}
-                {% if post.style == "horizontal" %}
+                {% if post.image.layout == "auto_width" %}
                 <div class="image_small">
                     <img src="{{ post.image.source }}" class="label" width="100%" height="auto"/>
                 </div>
@@ -60,7 +60,7 @@
                 <h2>{{ post.title }}</h2>
             </div>
             {% if post.image.source != nil %}
-                {% if post.style == "horizontal" %}
+                {% if post.image.layout == "auto_width" %}
                 <div class="image_small">
                     <img src="{{ post.image.source }}" class="label" width="100%" height="auto"/>
                 </div>
