--- a/_includes/post_recent.html
+++ b/_includes/post_recent.html
@@ -3,28 +3,37 @@
     <div class="recent_posts">
         {% capture nowday  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
         {% capture nowyear %}{{ 'now' | date: '%Y' }}{% endcapture %}
-        {% for post in site.categories['news_article'] limit:5 %}
-            {% if post.title != page.title %}
-                <div class="recent_post">
-                    <div class="recent_post_heading">
-                        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+        {% assign postCount = 0 %}
+        {% for post in site.categories['news'] %}
+            {% if post.categories contains 'newsbit' %}
+                {% continue %}
+            {% else%}
+                {% if post.title != page.title %}
+                    <div class="recent_post">
+                        <div class="recent_post_heading">
+                            <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                        </div>
+                    
+                        {% if post.date == nil %}
+                            <p class="date">Undated</p>
+                        {% else %}
+                            <p class="date">
+                                {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
+                                {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
+                                {% if postdate == nowday %}
+                                    {{ post.date | date: site.data.format.same_day }}
+                                {% elsif postyear == nowyear %}
+                                    {{ post.date | date: site.data.format.same_year }}
+                                {% endif %}
+                            </p>
+                        {% endif %}
+                        <p class="excerpt">{{ post.excerpt }}</p>
                     </div>
-                
-                    {% if post.date == nil %}
-                        <p class="date">Undated</p>
-                    {% else %}
-                        <p class="date">
-                            {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
-                            {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
-                            {% if postdate == nowday %}
-                                {{ post.date | date: site.data.format.same_day }}
-                            {% elsif postyear == nowyear %}
-                                {{ post.date | date: site.data.format.same_year }}
-                            {% endif %}
-                        </p>
+                    {% capture postCount %}{{ postCount | plus: 1 }}{% endcapture %}
+                    {% if postCount == '5' %}
+                        {% break %}
                     {% endif %}
-                    <p class="excerpt">{{ post.excerpt }}</p>
-                </div>
+                {% endif %}
             {% endif %}
         {% endfor %}
     </div>
