--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -5,12 +5,11 @@
         {% capture nowyear %}{{ 'now' | date: '%Y' }}{% endcapture %}
         <!-- The following code snippet was taken from http://zhangwenli.com -->
         <!-- http://zhangwenli.com/blog/2014/07/15/jekyll-related-posts-without-plugin/ -->
-        {% assign hasSimilar = '' %}
-        {% for post in site.categories['news_article'] limit:10 %}
-            {% assign postHasSimilar = false %}
-            {% for tag in post.tags %}
+        {% assign postCount = 0 %}
+        {% for post in site.categories['news'] %}
+            {% if post.categories != 'newsbit' %}
                 {% for thisTag in page.tags %}
-                    {% if postHasSimilar == false and hasSimilar.size < 3 and post.title != page.title and tag == thisTag %}
+                    {% if post.title != page.title and post.tags contains thisTag %}
                         <div class="related_post">
                             <div class="related_post_heading">
                                 <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
@@ -30,13 +29,16 @@
                             {% endif %}
                             <p class="excerpt">{{ post.excerpt }}</p>
                         </div>
-                        {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
-                        {% assign postHasSimilar = true %}
+                        {% capture postCount %}{{ postCount | plus: 1 }}{% endcapture %}
+                        {% if postCount == '5' %}
+                            {% break %}
+                        {% endif %}
                     {% endif %}
                 {% endfor %}
-            {% endfor %}
+            {% endif %}
         {% endfor %}
-        {% if hasSimilar.size == 0 %}
+
+        {% if postCount == '0' %}
             <div class="related_post">
                 <div class="related_post_heading">
                     <h2>No related posts</h2>
