Rename labels of related/recent news

--- a/_includes/post_recent.html
+++ b/_includes/post_recent.html
@@ -1,5 +1,5 @@
 <div id="recent_posts_block">
-    <h1>Recent Posts</h1>
+    <h1>Recent News</h1>
     <div class="recent_posts">
         {% capture nowday  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
         {% capture nowyear %}{{ 'now' | date: '%Y' }}{% endcapture %}
