--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -1,5 +1,5 @@
 <div id="related_posts_block">
-    <h1>Related Posts</h1>
+    <h1>Related News</h1>
     <div class="related_posts">
         {% capture nowday  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
         {% capture nowyear %}{{ 'now' | date: '%Y' }}{% endcapture %}
