--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1663,6 +1663,7 @@ section.column_right_sidebar {
                             font-size: $font_size_related_post_title;
                             font-weight: bold;
                             line-height: $font_size_related_post_title + 2;
+                            color: $color_news_title;
                             border-bottom: none;
                             display: block;
                         }
