--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -6,36 +6,47 @@
         <!-- The following code snippet was taken from http://zhangwenli.com -->
         <!-- http://zhangwenli.com/blog/2014/07/15/jekyll-related-posts-without-plugin/ -->
         {% assign postCount = 0 %}
+        {% assign foundPost = false %}
         {% for post in site.categories['news'] %}
-            {% if post.categories != 'newsbit' %}
-                {% for thisTag in page.tags %}
-                    {% if post.title != page.title and post.tags contains thisTag %}
-                        <div class="related_post">
-                            <div class="related_post_heading">
-                                <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-                            </div>
-                            {% if post.date == nil %}
-                                <p class="date">Undated</p>
-                            {% else %}
-                                <p class="date">
-                                    {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
-                                    {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
-                                    {% if postdate == nowday %}
-                                        {{ post.date | date: site.data.format.same_day }}
-                                    {% elsif postyear == nowyear %}
-                                        {{ post.date | date: site.data.format.same_year }}
-                                    {% endif %}
-                                </p>
-                            {% endif %}
-                            <p class="excerpt">{{ post.excerpt }}</p>
-                        </div>
-                        {% capture postCount %}{{ postCount | plus: 1 }}{% endcapture %}
-                        {% if postCount == '5' %}
-                            {% break %}
-                        {% endif %}
-                    {% endif %}
-                {% endfor %}
+        
+            {% if post.categories contains 'newsbit' %}
+                {% continue %}
             {% endif %}
+            
+            {% for thisTag in page.tags %}
+                {% if post.title != page.title and post.tags contains thisTag %}
+                    {% assign foundPost = true %}
+                    {% break %}
+                {% endif %}
+            {% endfor %}
+                
+            {% if post.title != page.title and foundPost == true %}
+                <div class="related_post">
+                    <div class="related_post_heading">
+                        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                    </div>
+                    {% if post.date == nil %}
+                        <p class="date">Undated</p>
+                    {% else %}
+                        <p class="date">
+                            {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
+                            {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
+                            {% if postdate == nowday %}
+                                {{ post.date | date: site.data.format.same_day }}
+                            {% elsif postyear == nowyear %}
+                                {{ post.date | date: site.data.format.same_year }}
+                            {% endif %}
+                        </p>
+                    {% endif %}
+                    <p class="excerpt">{{ post.excerpt }}</p>
+                </div>
+                {% assign foundPost = false %}
+                {% capture postCount %}{{ postCount | plus: 1 }}{% endcapture %}
+                {% if postCount == '5' %}
+                    {% break %}
+                {% endif %}
+            {% endif %}
+
         {% endfor %}
 
         {% if postCount == '0' %}
