--- a/_layouts/hub.html
+++ b/_layouts/hub.html
@@ -94,6 +94,22 @@ layout: default
         </div>
     </div>
     
+    <div id="news_section_agriculture_container">
+        <div class="news_section_block">
+            <h1>Agriculture</h1>
+            <div class="news_section">
+                {% for post in site.categories['agriculture'] limit:3 %}
+                    <div class="news_section_entry">
+                        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                        <p class="excerpt">{{ post.excerpt }}</p>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="news_section_block_right">
+        </div>
+    </div>
+
     {% comment %}
     <div id="news_section_vertical_container">
         <div class="news_section_agriculture_block">
